test/bad/functions/variadic03.px

func f(...c: Char = "") def
    skip

f()
